refactor: change ifs to stream